--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,38 @@
-@import-normalize; /* bring in normalize.css styles */
-
+/* @import-normalize; bring in normalize.css styles */
+:root{
+  --main-color:#121417;
+  --decorate-color: #f4c550;
+  --invent-color:#fff;
+  --second-color:#f8f8f8;
+  --accent-color: #fbe9ba;
+  --backdrop-color:rgba(18, 20, 23, 0.5);
+  --success-color: #3cbf61;
+  --error-color: #d80027;
+  --font-family: "Roboto", sans-serif;
+  --transition-duration: 250ms;
+  --transition-time-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+html{
+  font-size:calc(100vw / 1440 * 10);
+}
+@media screen  and (max-width:1024px){
+  html{
+    font-size: calc(100vw / 768 * 10);
+  }
+  
+}
+@media screen  and (max-width:767px){
+  html{
+    font-size: calc(100vw / 375 * 10);
+  }
+  
+}
+*,
+*::before,
+*::after
+{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +45,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1,h2,h3,h4,h5,h6,p,span{
+  margin-top: 0;
+  margin-bottom:0 ;
+}
+a{
+  text-decoration:none;
+}
+ul,ol{
+  list-style-type: none;
+  padding:0;
+}
+input{
+  padding:0;
+}
+button{
+  cursor:pointer;
 }
