--- a/src/components/CardItem/card-item.module.css
+++ b/src/components/CardItem/card-item.module.css
@@ -1,30 +1,154 @@
 .topBlock{
+    width:60.7rem;
+    height:2.6rem;
     display: flex;
     gap:3.2rem;
+    
 }
 .cardWrap{
     display: flex;
-    align-items: first baseline;
     gap:4.8rem;
+    width:118.4rem;
+    padding: 2.4rem;
+    border-radius: 2.4rem;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:var(--invent-color);
 }
 .avatarImg{
     width:9.6rem;
-    height:9.6rem;
-    border-radius: 50%;
-    
-}
+    height:9.rem; 
+    border-radius: 10rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+    .imgWrapper{
+        border: 3px solid var(--accent-color);
+        border-radius: 10rem;
+        width: 12rem;
+        height: 12rem; 
+        position: relative;
+        overflow: hidden;
+        position: relative;
+        
+        }
 .iconWrap{
     display: flex;
     gap:0.4rem;
-    
+    color:var(--main-color);
+    align-items: center;
 }
 .bookOpenIcon{
     width:1.6rem;
     height: 1.6rem;
+    stroke:currentColor;
+    fill:transparent;
+    
 }
-.imgWrapper{
-border: 3px solid #fbe9ba;
-border-radius: 100px;
-width: 120px;
-height: 120px;
+.starIcon{
+    width:1.6rem;
+    height: 1.6rem; 
+}
+
+.iconHeartBtn{
+    background-color: transparent;
+    width:2.6rem;
+    height:2.6rem;
+    padding:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border:none;
+
+}
+.contentWrap{
+    width:96.8rem;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.heartIcon{
+    width:2.6rem;
+    height:2.6rem;
+    fill:transparent;
+    stroke:var(--main-color);
+}
+.text{
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 1.6rem;
+line-height: 1.5;
+color:var(--addition-color);
+margin-bottom: 0.8px;
+}
+.topText{
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 1.6rem;
+line-height: 1.5;
+color:var(--main-color);
+}
+.priceText{
+   color:var(--rare-color); 
+}
+.benefitsList{
+    display: flex;
+    flex-direction:column;
+    gap:0.8rem;
+   
+}
+.columnWrapper{
+    display: flex;
+    flex-direction:column;
+    gap:3.2rem;
+}
+.benefitsWrap{
+    display: flex;
+    flex-direction:column;
+    gap:1.6rem; 
+}
+.buttonList{
+    display: flex;
+    gap:0.8rem;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+}
+.moreBtn{
+border:none;
+background-color: transparent;
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 1.6rem;
+line-height: 1.5;
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color:var(--main-color);
+display: flex;
+padding:0;
+}
+.benefitsText{
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 1.6rem;
+line-height: 1.5;
+color: var(--addition-color);
+}
+.infoDecorText{
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: var(--main-color);
+}
+.infoText{
+    color:var(--main-color); 
+}
+.title{
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 2.4rem;
+line-height: 1.0;
+color: var(--main-color);
 }
