--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -2,6 +2,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width:144rem;
+    Padding-bottom:9.8rem;
     padding-left:6.4rem;
     padding-right:6.4rem;
 }
