--- a/src/components/CardItem/card-item.module.css
+++ b/src/components/CardItem/card-item.module.css
@@ -167,3 +167,38 @@
   line-height: 1;
   color: var(--main-color);
 }
+@media screen and (max-width:767px) {
+  .cardWrap {
+    max-width:100%;
+    display: flex;
+    flex-direction: column;
+    position:relative;
+    padding:1.6rem;
+  }
+  .contentWrap{
+    flex-direction: column;
+    align-items: flex-start;
+   
+  }
+  .iconHeartBtn {
+    position:absolute;
+    top:2.4rem;
+    right:2.4rem;
+  }
+  .topBlock {
+    flex-direction:column;
+    gap:0.8rem;
+  }
+  .buttonList{
+    flex-direction: column;
+  }
+  /* .title{
+position: absolute;
+top:0;
+right:0;
+  } */
+
+  /* .text{
+    margin-bottom: 3.2rem;
+  } */
+}
