--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -1,26 +1,24 @@
-.container{
-    margin-left: auto;
-    margin-right: auto;
-    max-width:144rem;
-    Padding-bottom:9.8rem;
-    padding-left:6.4rem;
-    padding-right:6.4rem;
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 144rem;
+  padding-bottom: 9.8rem;
+  padding-left: 6.4rem;
+  padding-right: 6.4rem;
 }
 
-@media screen  and (max-width:1024px){
-    .container{
-   max-width:76.8rem;
-   padding-left:2.4rem;
-   padding-right:2.4rem;
+@media screen and (max-width: 1024px) {
+  .container {
+    max-width: 76.8rem;
 
-    }
-    
-  } 
-  @media screen and (max-width: 767px) {
-    .container {
-        max-width: 37.5rem;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-    }
+    padding-left: 2.4rem;
+    padding-right: 2.4rem;
+  }
 }
-
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 47.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
