--- a/src/components/FormLogin/form-login.module.css
+++ b/src/components/FormLogin/form-login.module.css
@@ -86,4 +86,8 @@ color: var(--main-color);
    padding-left:1.6rem;
    color: rgba(18, 20, 23, 0.8);
   }
-  
+  @media screen and (max-width: 767px){
+    .authInput{
+max-width:100%;
+    }
+  }
