--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -20,6 +20,7 @@ color: var(--main-color);
     gap:2.8rem;
 }
 .headerSection{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -38,10 +39,93 @@ color:var(--main-color);
     border-bottom:0.2rem solid var(--decorate-color);
 }
 
+.burgerBtn{
+    background-color: var(--invent-color);
+    color:var(--main-color);
+    border:none;
+    width:2.8rem;
+    height:2.8rem;
+    padding:0;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+.burgerIcon{
+    width:2.8rem;
+    height:2.8rem;
+    fill:currentColor;
+    stroke:currentColor;
+}
+.burgerWrapper{
+    display: none;
+    margin-left: auto;
+}
+.closeBtn{
+    display:none;
+}
+.menu{
+display: flex;
+align-items: center;
+}
+
 
 
 @media screen and (max-width: 767px){
-    .navList{
-        display: none;
+    .headerSection{
+        justify-content: space-between;
     }
-}
+    .burgerWrapper{
+        display: block;
+    }
+    .navList{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .menu{
+        display: flex;
+        flex-direction: column;
+        gap:2.8rem;
+        justify-content: center;
+        position:fixed;
+        left:-100%;
+        top:0;
+      
+        width:70%;
+        height:100vh;
+        z-index: 1000;
+        background-color: var(--accent-color);
+       
+        transition:Left  var( --transition-duration) var(--transition-time-function);
+        
+    }
+    .isOpen{
+        
+        left:0;
+    }
+    .closeBtn {
+        position: absolute;
+        top: 1.6rem;
+        right: 1.6rem;
+        width: 3.2rem;
+        height: 3.2rem;
+        border: none;
+        background-color: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        color: var(--main-color);
+      }
+      .closeIcon {
+        width: 1.6rem;
+        height: 1.6rem;
+        stroke: currentColor;
+      }
+         
+    /* .link:global(.active){
+        color:var(--main);
+        border-bottom:0.2rem solid var(--main-color);
+    } */
+   
+    }
+    
