--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ html{
 }
 body {
   margin: 0;
+  height:100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -67,3 +68,4 @@ input{
 button{
   cursor:pointer;
 }
+
