--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -5,12 +5,14 @@
   padding-bottom: 9.8rem;
   padding-left: 6.4rem;
   padding-right: 6.4rem;
+  height:100%;
 }
 
 @media screen and (max-width: 1024px) {
   .container {
-    max-width: 76.8rem;
-
+    width: 76.8rem;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 2.4rem;
     padding-right: 2.4rem;
   }
@@ -21,4 +23,5 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+ 
 }
