--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -90,8 +90,8 @@ align-items: center;
         left:-100%;
         top:0;
       
-        width:70%;
-        height:100vh;
+        width:100%;
+        height:100%;
         z-index: 1000;
         background-color: var(--accent-color);
        
