--- a/src/pages/HomePage/home-page.module.css
+++ b/src/pages/HomePage/home-page.module.css
@@ -136,11 +136,11 @@
     position: static;
   }
   .part::before {
-    top: 20rem;
-    right: 0rem;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    top: 14rem;
+    left: 17rem;
+    width: 47%;
+   
+   
   }
   .heroWrapper {
     margin-bottom: 1.6rem;
