--- a/src/components/AuthNav/auth-nav.module.css
+++ b/src/components/AuthNav/auth-nav.module.css
@@ -1,50 +1,56 @@
-.loginIcon{
-    width:2rem;
-    height: 2rem;
-    
+.loginIcon {
+  width: 2rem;
+  height: 2rem;
 }
 
-.authWrapper{
-    display: flex;
-    gap:2.3rem;
+.authWrapper {
+  display: flex;
+  gap: 2.3rem;
+  align-items: center;
+}
+.loginBtn {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 1.25;
+  color: var(--main-color);
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+.registrationBtn {
+  border-radius: 1.2rem;
+  padding: 1.4rem 3.9rem;
+  max-width: 16.6rem;
+  height: 4.8rem;
+  background-color: var(--main-color);
+  border: none;
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 1.25;
+  color: var(--invent-color);
+  transition: background-color var(--transition-duration)
+      var(--transition-time-function),
+    color var(--transition-duration) var(--transition-time-function),
+    border var(--transition-duration) var(--transition-time-function);
+}
+.registrationBtn:is(:hover, :focus) {
+  border: 0.1rem solid var(--main-color);
+  color: var(--main-color);
+  background-color: var(--invent-color);
+}
+@media screen and (max-width: 1024px) {
+  .authWrapper {
+    gap: 2rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .authWrapper {
+    flex-direction: column;
     align-items: center;
-}
-.loginBtn{
-font-family: var(--font-family);
-font-weight: 700;
-font-size: 1.6rem;
-line-height: 1.25;
-color:var(--main-color);
-background-color: transparent;
-border:none;
-display: flex;
-align-items: center;
-gap:0.8rem;
-}
-.registrationBtn{
-border-radius: 1.2rem;
-padding: 1.4rem 3.9rem;
-max-width: 16.6rem;
-height: 4.8rem;
-background-color: var(--main-color);
-border:none;
-font-family: var(--font-family);
-font-weight: 700;
-font-size: 1.6rem;
-line-height: 1.25;
-color:var(--invent-color);
-transition: background-color var(--transition-duration) var(--transition-time-function),color var(--transition-duration) var(--transition-time-function),border var(--transition-duration) var(--transition-time-function) ;
-}
-.registrationBtn:is(:hover,:focus){
-    border: 0.1rem solid var(--main-color);
-    color:var(--main-color);
-    background-color:var(--invent-color);
-}
-@media screen and (max-width: 767px){
-            .authWrapper {
-          
-       flex-direction: column;
-       align-items: center;
-    }
-  
+    gap: 3.2rem;
+  }
 }
