--- a/src/components/NotFoundHeader/not-found-header.module.css
+++ b/src/components/NotFoundHeader/not-found-header.module.css
@@ -75,3 +75,42 @@
   background-color: var(--addition-color);
   display: block;
 }
+.burgerBtn {
+  background-color: var(--invent-color);
+  color: var(--addition-color);
+  border: none;
+  width: 2.8rem;
+  height: 2.8rem;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.burgerIcon {
+  width: 2.8rem;
+  height: 2.8rem;
+  fill: currentColor;
+  stroke: currentColor;
+}
+.burgerWrapper {
+  display: none;
+  margin-left: auto;
+}
+@media screen and (max-width: 767px) {
+  .headerSection {
+    justify-content: space-between;
+  }
+  .burgerWrapper {
+    display: block;
+  }
+  .navList {
+    display: none;
+  }
+  .authWrapper {
+    display: none;
+  }
+
+  .burgerWrapper {
+    display: block;
+  }
+}
