--- a/src/components/LogOutBtn/log-out-btn.module.css
+++ b/src/components/LogOutBtn/log-out-btn.module.css
@@ -13,4 +13,8 @@ border:none;
 display: flex;
 align-items: center;
 gap:0.8rem;
+transition: color  var(--transition-duration) var(--transition-time-function);
+}
+.logOutBtn:is(:hover, :focus){
+    color:var(--decorate-color);
 }
