--- a/src/pages/TeachersPage/teachers-page.module.css
+++ b/src/pages/TeachersPage/teachers-page.module.css
@@ -11,4 +11,8 @@
   margin-left: auto;
   margin-right: auto;
   display: block;
+  transition: background-color  var(--transition-duration) var(--transition-time-function);
+}
+.loadMoreBtn:hover{
+  background-color: var(--accent-color);
 }
