--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -2,6 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 144rem;
+ 
   padding-bottom: 9.8rem;
   padding-left: 6.4rem;
   padding-right: 6.4rem;
@@ -11,6 +12,7 @@
 @media screen and (max-width: 1024px) {
   .container {
     width: 76.8rem;
+    width:100vw;
     margin-left: auto;
     margin-right: auto;
     padding-left: 2.4rem;
@@ -20,6 +22,7 @@
 @media screen and (max-width: 767px) {
   .container {
     max-width: 47.5rem;
+    
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
