--- a/src/components/FormBooking/form-booking.module.css
+++ b/src/components/FormBooking/form-booking.module.css
@@ -12,6 +12,7 @@ letter-spacing: -0.02em;
 color:var(--main-color);
 margin-bottom:2rem;
 }
+
 .textBooking{
     font-family: var(--font-family);
     font-weight: 400;
@@ -57,7 +58,7 @@ margin-bottom: 2rem;
 border: 0.1rem solid rgba(18, 20, 23, 0.1);
 border-radius: 12px;
 padding-left: 1.6rem ;
-width: 47.2rem;
+width: 100%;
 height: 5.4rem;
 outline:none;
 transition: outline var(--transition-duration) var(--transition-time-function);
