--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -1,73 +1,66 @@
-.backdrop{
-    position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: var(--backdrop-color);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 500;
-        }
-.modal{
-    border-radius: 3rem;
-    max-width: 56.5rem;
-    height: auto;
-    background-color: var(--invent-color);
-    padding:6.4rem;
-    position: absolute;
-    
-    max-height: 96vh;
-    overflow-y: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--backdrop-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 500;
 }
-.modal::-webkit-scrollbar {
-    width: 1rem; 
-    max-height:5rem;
-    padding-right: 1rem;
-    border-top-right-radius: 3rem;
-   
-    
-  }
-  
-  .modal::-webkit-scrollbar-track {
-    background: #fff; 
-   
-    max-height:90%;
-  }
-  
-  .modal::-webkit-scrollbar-thumb {
-    background: #eee; 
-    border-radius: 1rem;
-  }
-.closeBtn{
-position: absolute;
-top:2.8rem;
-right:2.8rem;
-width:3.2rem;
-height:3.2rem;
-border:none;
-background-color:transparent;
-display:flex;
-align-items: center;
-justify-content: center;
-padding:0;
-color:var(--main-color);
+.modal {
+  border-radius: 3rem;
+  max-width: 56.5rem;
+  height: 100vh;
+  background-color: var(--invent-color);
+  padding: 6.4rem;
+  position: absolute;
+  overflow-y: auto;
 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.closeIcon{
-    width:1.6rem;
-    height:1.6rem;
-    stroke:currentColor;
+
+.modal::-webkit-scrollbar {
+  width: 1.1rem;
 }
-@media screen and (max-width: 767px){ 
-    .modal{
-        padding:3.2rem;
-        max-width:96%;
-      
-        
-    } 
+
+.modal::-webkit-scrollbar-track {
+  background-color: transparent;
+
+  margin-block: 3rem;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  background: #eee;
+  border-radius: 100vw;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 2.8rem;
+  right: 2.8rem;
+  width: 3.2rem;
+  height: 3.2rem;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  color: var(--main-color);
+}
+.closeIcon {
+  width: 1.6rem;
+  height: 1.6rem;
+  stroke: currentColor;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    padding: 3.2rem;
+    max-width: 96%;
+  }
 }
