--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -22,7 +22,8 @@
 @media screen and (max-width: 767px) {
   .container {
     max-width: 47.5rem;
-    
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
