--- a/src/pages/TeachersPage/teachers-page.module.css
+++ b/src/pages/TeachersPage/teachers-page.module.css
@@ -19,7 +19,7 @@
 
 .loaderText{
   text-align: center;
-  color:var(--decorate-color);
+  color:var(--main);
   font-family: var(--font-family);
   font-size: 1.6rem;
   line-height: 1.56;
