--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -11,8 +11,8 @@
 
 @media screen and (max-width: 1024px) {
   .container {
-    width: 76.8rem;
-    width:100vw;
+    max-width: 76.8rem;
+    
     margin-left: auto;
     margin-right: auto;
     padding-left: 2.4rem;
@@ -22,6 +22,7 @@
 @media screen and (max-width: 767px) {
   .container {
     max-width: 47.5rem;
+   
     margin-left: auto;
     margin-right: auto;
     padding-left: 1.5rem;
