--- a/src/pages/FavoritesPage/favorites-page.module.css
+++ b/src/pages/FavoritesPage/favorites-page.module.css
@@ -15,3 +15,8 @@
     padding-top:6.4rem;
     text-align:center;
 }
+.favoritesSection{
+    max-width:100vw;
+    height:100vh;
+    background-color: #eee;
+}
