--- a/src/pages/TeachersPage/teachers-page.module.css
+++ b/src/pages/TeachersPage/teachers-page.module.css
@@ -24,3 +24,8 @@
   font-size: 1.6rem;
   line-height: 1.56;
 }
+.teachersSection{
+  max-width:100vw;
+  height:auto;
+  background-color: #eee;
+}
